--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -364,7 +364,7 @@ attachments:
   typePlaceholder: none
   regulatory: regulatory
   saveAndGo: Save and go to attachments
-  noDecisonsFound: No decisions found
+  noDecisionsFound: No decisions found
   decisionRequired: Only attachments linked to a decision are included in the publication.
 documentCreator:
   titleField: Agendapoint title
