--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -77,7 +77,9 @@ meetingForm:
   fifthSectionTitle: 5. Treatment of the agenda items
   sixthSectionTitle: 6. Free text (meeting outro).
   seventhSectionTitle: 7. End of the meeting
-  meetingHeadingPartOne: Meeting minutes of
+  meetingHeadingPartOne: Meeting minutes
+  meetingHeadingArticleGendered: of
+  meetingHeadingArticleUngendered: of
   meetingHeadingPartTwo: of
   firstSectionNotFilledWarning: Before you can start the meeting it is necessary to set a date, location and governing body.
   secondSectionNotFilledWarning: Complete the attendance.
