add translations for the page titles

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -5,6 +5,7 @@ inbox:
     trash: Recycle bin
     manual: View manual
   meetings:
+    pageTitle: Meetings
     newMeeting: New meeting
     new:
       title: Create a new meeting
