Better placeholder text?
You can only remove agendapoints (move them to the trash) and yet in the
trash it would say to search for meetings.

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -40,7 +40,7 @@ inbox:
     pageTitle: Recycle bin
     title: Recycle bin
     noDataMessage: No documents
-    searchPlaceholder: Type the title of a meeting
+    searchPlaceholder: Type the title of an agendapoint
     restoreMessage: Restore selected documents
 publish:
   backToMeeting: Back to meeting
