--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -76,6 +76,7 @@ behandelingVanAgendapunten:
   needsParticipants: Please configure the participants to this agenda-item before adding a voting.
   editDocument: "Edit document"
 meetingForm:
+  dateWarning: You can't pick an end-date that is before the start date.
   incompleteWarning: Please fill out the meeting details and add at least one agenda item before publishing.
   backButton: Back to meetings
   scheduledText: Meeting scheduled on
