--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -76,6 +76,7 @@ behandelingVanAgendapunten:
   needsParticipants: Configureer de aanwezigen bij dit agendapunt alvorens een stemming toe te voegen.
   editDocument: "Bewerk document"
 meetingForm:
+  dateWarning: U kunt geen einddatum kiezen die vóór de startdatum ligt.
   incompleteWarning: Voor je kan doorgaan met publiceren is het nodig om een bestuursorgaan in te stellen en minstens 1 agendapunt toe te voegen.
   backButton: Terug naar overzicht zittingen
   scheduledText: Zitting gepland op
