initial wiring of regulatory statements prototype
- list view working
- can create new statements
- edit page needs more work

--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -51,6 +51,7 @@ inbox:
     agendaPoint: Agendapunt
     new:
       title: Nieuwe reglementaire bijlage
+      errorSaving: Er liep iets fout bij het aanmaken van de reglementaire bijlage
   irgArchive:
     return: Terug naar overzicht IRG archief
     pageTitle: IRG Archief
