--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -327,6 +327,8 @@ blockchainStatus:
   encryptingText: Encrypting a document can take several minutes. Refresh the page to see the new status.
 appChrome:
   copyAgendapoint: Copy Agendapoint
+  defaultDocumentStatus: Concept not saved
+  deleteConcept: Delete concept
 manageIntermissions:
   interruptionStartLabel: Start
   interruptionEndLabel: End
@@ -402,3 +404,5 @@ documentCreator:
   titleField: Agendapoint title
   template: Template
   templateSelectPlaceholder: Select a template
+editorStatusPill:
+  defaultStatus: Concept
