move attachments logic to its own route and clean up appchrome

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -419,3 +419,7 @@ documentCreator:
   templateSelectPlaceholder: Select a template
 editorStatusPill:
   defaultStatus: Concept
+agendapoint:
+  revisions: Revisions
+  save: Save
+  options: File options
