--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -422,3 +422,7 @@ documentCreator:
   templateSelectPlaceholder: Kies een sjabloon
 editorStatusPill:
   defaultStatus: In voorbereiding
+agendapoint:
+  revisions: Versies
+  save: Bewaar
+  options: Bestand acties
