refactor: remove custom edit screens on meeting and link to existing route

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -425,3 +425,4 @@ agendapoint:
   options: File options
   restore: Restore
   export: Export as HTML
+  backToMeeting: Return to the meeting of {adminBody} on {date}
