--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -428,3 +428,4 @@ agendapoint:
   options: Bestand acties
   restore: Herstel
   export: Exporteer als HTML
+  backToMeeting: Terug naar zitting van {adminBody} op {date}
