When the notulen is published disable the editing

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -120,6 +120,7 @@ meetingForm:
   fifthSectionNotFilledWarning: Manage your decision and votes.
   sixthSectionNotFilledWarning: Fill outFree text (meeting outro).
   bestuursorganNotSelectedWarning: Alvorens u verder kan gaan, dient de zitting eerst informatie te hebben over het bestuursorgaan.
+  notulenPublished: Meeting is published
 manageZittingsData:
   startNotSet: "start date has not been set"
   endNotSet: "end date has not been set"
