--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -433,6 +433,8 @@ regulatoryStatementsPlugin:
   noStatementSelected: No regulatory statement selected
   editStatement: Edit
   detachStatement: Detach
+  loadMore: Load more
+  alreadyAttached: Already attached
 utils:
   save: Save
   fileOptions: File options
