--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -436,6 +436,8 @@ regulatoryStatementsPlugin:
   noStatementSelected: Geen reglement geselecteerd
   editStatement: Bewerk
   detachStatement: Loskoppelen
+  loadMore: Meer laden
+  alreadyAttached: Reeds gekoppeld
 utils:
   save: Bewaar
   fileOptions: Bestand acties
