translated rest of the app chrome

--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -7,6 +7,8 @@ appChrome:
   copyAgendapoint: Kopieer agendapunt
   defaultDocumentStatus: Voorbereiding niet bewaard
   deleteConcept: Verwijder voorbereiding
+  savedOn: Bewaard op
+  changesNotSaved: Wijzigingen niet bewaard
 
 attachments:
   attachments: Bijlagen
