--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -7,6 +7,8 @@ appChrome:
   copyAgendapoint: Copy Agendapoint
   defaultDocumentStatus: Concept not saved
   deleteConcept: Delete concept
+  savedOn: Saved on
+  changesNotSaved: Changes not saved
 
 attachments:
   attachments: Attachments
