--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -125,6 +125,7 @@ inbox:
   irgArchive:
     return: Terug naar overzicht IRG archief
     pageTitle: IRG Archief
+    pageSubTitle: Reglementen tot 3/11/2022
     searchPlaceholder: Zoek op titel van reglement
     titleLabel: Titel reglement
     typeLabel: Wegtype
