add a class, fix reloading and translation

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -426,7 +426,7 @@ utils:
   htmlExport: Export as HTML
   delete: Delete
   restore: Restore
-  actualVersion: Actual Version
+  currentVersion: Current Version
   history: History
   fullHistory: See the full history
 
