Don't allow participant list insertion if the chairman is not present

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -299,6 +299,7 @@ participationListModal:
   presentLabel: Present mandatees
   saveButton: Insert attendees
   cancelButton: Cancel
+  chairmanAbsentError: Chairman cannot be absent
 
 participationListModalSelector:
   loadingMessage: Loading...
