--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -301,6 +301,7 @@ participationListModal:
   presentLabel: Aanwezige mandatarissen
   saveButton: Voeg aanwezigen in
   cancelButton: Annuleer
+  chairmanAbsentError: De voorzitten kan niet afwezig zijn
 
 participationListModalSelector:
   loadingMessage: Aan het laden...
