--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -120,9 +120,12 @@ inbox:
     statusLabel: Status
     type: Type
     agendaPoint: Agendapunt
+    readOnlyBanner:
+      title: Niet editeerbaar
+      message: Dit is een oude versie. Herstel deze versie om nieuwe wijzigingen door te voeren.
     new:
       title: Nieuwe reglementaire bijlage
-      errorSaving: Er liep iets fout bij het aanmaken van de reglementaire bijlage
+      errorSaving: Er liep iets fout bij het aanmaken van de reglementaire bijlage.
   irgArchive:
     return: Terug naar overzicht IRG archief
     pageTitle: IRG Archief
