--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -123,6 +123,7 @@ inbox:
     readOnlyBanner:
       title: Not editable
       message: This is an old version. Restore this version to make new edits.
+      publishedMessage: This is an old published version. Restore this version to make new edits.
     new:
       title: New regulatory statement
       errorSaving: Something went wrong while creating the regulatory statement.
