--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -127,7 +127,7 @@ inbox:
       title: Not editable
       message: This is an old version. Restore this version to make new edits.
       oldPublishedMessage: This is an old published version. Restore this version to make new edits.
-      publishedMessage: This regulatory statement have already been published. Published regulatory attachments are not editable.
+      publishedMessage: This regulatory statement has already been published. Published regulatory attachments are not editable.
       publishedMessageTitle: Non editable
     new:
       title: New regulatory statement
