only show linked agendapoints button when there are any

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -137,6 +137,7 @@ inbox:
       title: New regulatory statement
       errorSaving: Something went wrong while creating the regulatory statement.
     linkedAgendapoints:
+      buttonLabel: Linked agendapoints
       title: Agendapoints linked to {title}
       noData: No agendapoints found
   irgArchive:
