--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -297,6 +297,14 @@ meetings:
       saveAndQuit: Opslaan en afsluiten
       cancel: Annuleren
 
+not-found:
+  title: Pagina niet gevonden
+  body:
+    explanation: Onze excuses, maar we slaagden er niet in om deze pagina terug te vinden.
+    contact-message: Indien u denk dat dit een fout is, kan u ons steeds contacteren op onze
+    contact-link: contact-pagina
+    email-message: Of stuur een mail naar
+
 participation:
   presentLabel: "Aanwezige mandatarissen:"
 
