--- a/translations/nl-BE.yaml
+++ b/translations/nl-BE.yaml
@@ -301,7 +301,7 @@ not-found:
   title: Pagina niet gevonden
   body:
     explanation: Onze excuses, maar we slaagden er niet in om deze pagina terug te vinden.
-    contact-message: Indien u denk dat dit een fout is, kan u ons steeds contacteren op onze
+    contact-message: Indien u denkt dat dit een fout is, kan u ons steeds contacteren op onze
     contact-link: contact-pagina
     email-message: Of stuur een mail naar
 
