--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -2,7 +2,10 @@ agendapoint:
   revisions: Revisions
   restore: Restore
   backToMeeting: Return to the meeting of {adminBody} on {date}
-  not-found: Agendapoint not found
+  not-found: 
+    title: Agendapoint not found
+    explanation: It's possible that you don't have access to the agendapoint with this account
+
 
 appChrome:
   copyAgendapoint: Copy Agendapoint
@@ -157,7 +160,9 @@ inbox:
     restoreMessage: Restore selected documents
 
 irg-archive:
-  not-found: Reglement not found
+  not-found: 
+    title: Reglement not found
+    explanation: It's possible that you don't have access to the reglement with this account
 
 manageAgendaZitting:
   titelLabel: Title
@@ -299,7 +304,10 @@ meetings:
       confirmQuitWithoutSaving: Are you sure you want to leave the page without saving your changes?
       saveAndQuit: Save and Quit
       cancel: Cancel
-  not-found: Meeting not found
+  not-found: 
+    title: Meeting not found
+    explanation: It's possible that you don't have access to the meeting with this account
+
 
 
 not-found:
@@ -398,7 +406,10 @@ rdfaEditorContainer:
   makingCopy: Making copy
 
 regulatory-statements:
-  not-found: Regulatory statement not found
+  not-found: 
+    title: Regulatory statement not found
+    explanation: It's possible that you don't have access to the regulatory statement with this account
+
 
 regulatoryStatementsPlugin:
   regulatoryStatement: Regulatory Statement
