use kebab-case in translations and remove unused translations

--- a/translations/appuniversum/en-us.yaml
+++ b/translations/appuniversum/en-us.yaml
@@ -1,5 +1,5 @@
 auDatePicker:
-  buttonLabel: "Choose a date"
+  button-label: "Choose a date"
   selectedDateMessage: "Selected date is"
   prevMonthLabel: "Previous month"
   nextMonthLabel: "Next month"
