use kebab-case in appuniversum translations

--- a/translations/appuniversum/en-us.yaml
+++ b/translations/appuniversum/en-us.yaml
@@ -1,10 +1,10 @@
-auDatePicker:
+au-date-picker:
   button-label: "Choose a date"
-  selectedDateMessage: "Selected date is"
-  prevMonthLabel: "Previous month"
-  nextMonthLabel: "Next month"
-  monthSelectLabel: "Month"
-  yearSelectLabel: "Year"
-  closeLabel: "Close windows"
-  keyboardInstruction: "You can use arrow keys to navigate dates"
-  calendarHeading: "Choose a date"
+  selected-date-message: "Selected date is"
+  prev-month-label: "Previous month"
+  next-month-label: "Next month"
+  month-select-label: "Month"
+  year-select-label: "Year"
+  close-label: "Close windows"
+  keyboard-instruction: "You can use arrow keys to navigate dates"
+  calendar-heading: "Choose a date"
